--- a/src/main/webapp/LoginStyles.css
+++ b/src/main/webapp/LoginStyles.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
 }
-
 .res {
     display: flex;
     align-items: center;
@@ -14,9 +13,8 @@
     padding: 0 15px;
     min-height: 100vh;
     justify-content: center;
-    background: #f0f2f5;
+    
 }
-
 .fb-form {
     justify-content: space-between;
     max-width: 1000px;
@@ -64,7 +62,7 @@ form input:focus {
     border-color: #1877f2;
 }
 
-::placeholder {
+:placeholder {
     color: #777;
     font-size: 1.063rem;
 }
@@ -77,21 +75,42 @@ form input:focus {
     color: #0350b6;
 }
 
+.question a{
+    font-weight: bold;
+}
+/* Style for submit button */
 .fb-submit .login {
     border: none;
     outline: none;
     cursor: pointer;
-    background: #0350b6;
-    padding: 15px 0;
+    background: #7489ef;
+    padding: 15px 20px;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 1.063rem;
+    font-weight: 600;
+    transition: 0.2s ease;
+   
+}
+
+.fb-submit .login:hover {
+    background: #0d65d9;
+}
+
+.button {
+    border: none;
+    outline: none; 
+    cursor: pointer;
+    background: #00badf;
+    padding: 15px 15px;
     border-radius: 6px;
     color: #fff;
     font-size: 1.25rem;
     font-weight: 600;
     transition: 0.2s ease;
-}
-
-.fb-submit .login:hover {
-    background: #0d65d9;
+} 
+.button:hover {
+    background: #1e5ae6;
 }
 
 form a {
@@ -119,94 +138,4 @@ hr {
     margin-top: 25px;
     text-align: center;
     margin-bottom: 20px;
-}
-
-
-.button a {
-    padding: 15px 20px;
-    background: #42b72a;
-    border-radius: 6px;
-    color: #fff;
-    font-size: 1.063rem;
-    font-weight: 600;
-    transition: 0.2s ease;
-}
-
-.button a:hover {
-    background: #3ba626;
-}
-
-.footer-langs {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-footer ol {
-    display: flex;
-    flex-wrap: wrap;
-    list-style-type: none;
-    padding: 8px 0;
-
-    margin-left: 3vh;
-}
-
-footer ol:first-child {
-    border-bottom: 1px solid #dddfe2;
-}
-
-footer ol:first-child li:last-child button {
-    background-color: #f5f6f7;
-    border: 1px solid #ccd0d5;
-    outline: none;
-    color: #4b4f56;
-    padding: 0 8px;
-    font-weight: 700;
-    font-size: 12px;
-}
-
-footer ol li {
-    padding-right: 20px;
-    font-size: 12px;
-    color: #8a8d91;
-}
-
-footer ol li a {
-    text-decoration: none;
-    color: #8a8d91;
-}
-
-footer ol li a:hover {
-    text-decoration: underline;
-}
-
-footer small {
-    font-size: 12px;
-    color: #8a8d91;
-    margin-left: 3vh;
-}
-
-@media (max-width: 900px) {
-    .fb-form {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .fb-form .card {
-        margin-bottom: 30px;
-    }
-}
-
-@media (max-width: 460px) {
-    .fb-form h1 {
-        font-size: 3.5rem;
-    }
-
-    .fb-form p {
-        font-size: 1.3rem;
-    }
-
-    form {
-        padding: 15px;
-    }
 }
