--- a/src/main/webapp/css/indexStyles.css
+++ b/src/main/webapp/css/indexStyles.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-family: 'Space Mono', monospace;
     margin: 0;
     padding: 0;
     background-color: #f8f8f8;
