--- a/src/main/webapp/css/myDataStyles.css
+++ b/src/main/webapp/css/myDataStyles.css
@@ -12,7 +12,7 @@ body{
     margin-bottom: 50px;
 }
 .list h5{
-   text-align: center   ;
+	width: 350px;
     padding-left: 20px;
     display: inline-block;
 }
@@ -24,4 +24,5 @@ ul{
 }
 li{
     list-style: none;
+    margin: 10px 0;
 }
