--- a/src/main/webapp/css/indexStyles.css
+++ b/src/main/webapp/css/indexStyles.css
@@ -6,6 +6,54 @@ body {
     background-color: #f8f8f8;
 }
 
+.button {
+    animation: wiggle 2s linear infinite;
+  }
+  
+  @keyframes wiggle {
+    0%, 7% {
+      transform: rotateZ(0);
+    }
+    15% {
+      transform: rotateZ(-15deg);
+    }
+    20% {
+      transform: rotateZ(10deg);
+    }
+    25% {
+      transform: rotateZ(-10deg);
+    }
+    30% {
+      transform: rotateZ(6deg);
+    }
+    35% {
+      transform: rotateZ(-4deg);
+    }
+    40%, 100% {
+      transform: rotateZ(0);
+    }
+  }
+.button {
+    
+    left: calc(50% - 3em);
+    top: calc(50% - 2em);
+    
+    height: 4em;
+    width: 7em;
+    
+    background: #444;
+    background: linear-gradient(top, #555, #333);
+    border: none;
+    border-top: 3px solid orange;
+    border-radius: 0 0 0.2em 0.2em;
+    color: #fff;
+    font-family: Helvetica, Arial, Sans-serif;
+    font-size: 1em;
+    transform-origin: 50% 5em;
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+
 .container {
     position: relative;
     display: flex;
@@ -56,18 +104,19 @@ textarea::placeholder {
     color: #999;
 }
 
-button[type="button"] {
-    padding: 10px 20px;
-    font-size: 18px;
-    color: white;
-    background-color: #66cdaa;
+.button{
     border: none;
-    border-radius: 5px;
+    outline: none; 
     cursor: pointer;
-    transition: background-color 0.3s;
-    margin-top: 10px;
+    background: #00badf;
+    padding: 15px 15px;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 1.25rem;
+    font-weight: 600;
+    transition: 0.2s ease;
 }
 
-button[type="button"]:hover {
-    background-color: #5cb995;
+.button:hover {
+    background: #1e5ae6
 }
