--- a/src/main/webapp/css/myDataStyles.css
+++ b/src/main/webapp/css/myDataStyles.css
@@ -1,28 +1,93 @@
-*{
-padding: 0;
-margin: 0;
-box-sizing: border-box;
+
+@keyframes background-animation {
+    0% { background-position: 0 0; }
+    100% { background-position: 100% 100%; } 
 }
-body{
-    font-family: cursive;
-    background-color: rgb(226, 157, 84);
+
+body {
+    animation: background-animation 15s ease infinite; 
+    background: linear-gradient(-45deg, #87CEEB, #20B2AA, #87CEEB); 
+    background-size: 400% 400%; 
+    font-family: sans-serif; 
+    background-color: #FFFFFF; 
+    padding: 0;
+   
+    box-sizing: border-box;
 }
-.list h2{
+
+.list h2 {
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px; 
+    position: relative;
 }
-.list h5{
-	width: 350px;
+
+.list h2::before {
+    content: ''; 
+    position: absolute; 
+    bottom: -10px; 
+    left: 50%;
+    width: 50%;
+    height: 2px; 
+    background-color: #20B2AA;
+    animation: underline 2s infinite alternate;
+}
+
+.list h5 {
+    width: 300px;
     padding-left: 20px;
     display: inline-block;
+    position: relative; 
 }
-ul{
+
+.list h5::before {
+    content: '';
+    position: absolute; 
+    bottom: -5px; 
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #20B2AA; 
+    animation: underline 2s infinite alternate;
+}
+
+ul {
     justify-content: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;	
 }
-li{
+li {
     list-style: none;
-    margin: 10px 0;
+    margin: 3px 0;
+}
+
+
+button {
+    position: relative; 
+    overflow: hidden; 
+    z-index: 0; 
+}
+
+button::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300%;
+    height: 300%; 
+    background-color: #20B2AA;
+    border-radius: 50%;
+    transition: all 0.3s ease;
+    z-index: -1; 
+    transform: translate(-50%, -50%) scale(0); 
+}
+
+button:hover::before {
+    transform: translate(-50%, -50%) scale(2); 
+}
+
+@keyframes underline {
+    to {
+        width: 0; 
+    }
 }
